--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,15 +3,18 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/settingFragment"
+            android:icon="@drawable/settings"
             android:title="@string/menu_settings" />
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/profileFragment"
+            android:icon="@drawable/account_circle"
             android:title="@string/menu_profile" />
         <item
             android:id="@+id/nav_exit"
+            android:icon="@drawable/exit_to_app"
             android:title="@string/menu_exit" />
-<!--            android:icon="@drawable/settings"-->
+
 
     </group>
 </menu>
