--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/purple_200"
     tools:context=".ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</FrameLayout>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/circle_bg"
+        android:src="@drawable/account_circle"
+        android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/txv_name"
+        android:text="@string/name"
+        style="@style/txv_profile_style" />
+
+        <TextView
+            android:id="@+id/txv_nationalCode"
+            android:text="@string/nationalCode"
+            style="@style/txv_profile_style" />
+
+        <TextView
+            android:id="@+id/txv_phoneNumber"
+            android:text="@string/phoneNumber"
+            style="@style/txv_profile_style" />
+
+
+    </LinearLayout>
+
+
+</ScrollView>
