--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/homeFragment"
+            android:icon="@drawable/home"
+            android:title="@string/menu_home" />
         <item
             android:id="@+id/settingFragment"
             android:icon="@drawable/settings"
@@ -14,6 +19,7 @@
             android:id="@+id/nav_exit"
             android:icon="@drawable/exit_to_app"
             android:title="@string/menu_exit" />
+
 
 
     </group>
