--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -28,6 +28,14 @@
         android:padding="10dp"
         android:layout_margin="20dp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imv_detail"
+        android:background="@color/teal_700"/>
+
     <TextView
         android:id="@+id/txv_name_detail"
         android:layout_width="match_parent"
