--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,14 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SettingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item_number"
+            android:layout_margin="10dp"
+            android:padding="10dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="4"
+            android:gravity="center"
+            android:layout_margin="5dp"/>
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="50dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:progress="4"
+            android:max="6"
+            android:min="1" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/black"
+            android:alpha="0.2"
+            android:layout_marginHorizontal="10dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/choose_theme"
+            android:layout_margin="10dp"/>
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/radioBtn_pink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pink"
+                android:layout_weight="1"
+                android:textColor="@color/pink"
+                android:shadowColor="@color/pink"
+                android:layout_marginStart="20dp"/>
+            <RadioButton
+                android:id="@+id/radioBtn_blue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/blue"
+                android:checked="true"
+                android:textColor="@color/blue"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"/>
+            <RadioButton
+                android:id="@+id/radioBtn_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dark"
+                android:textColor="@color/gray"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"/>
+
+
+        </RadioGroup>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/black"
+            android:alpha="0.2"
+            android:layout_marginHorizontal="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txv_addInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/addInfo"
+                android:padding="10dp"
+                android:layout_margin="10dp"/>
+            <EditText
+                android:id="@+id/edt_name"
+                android:hint="@string/fullname"
+                style="@style/edt_style" />
+            <EditText
+                android:id="@+id/edt_nationalCode"
+                android:hint="@string/nationalCode"
+                android:inputType="numberDecimal"
+                style="@style/edt_style" />
+            <EditText
+                android:id="@+id/edt_phone"
+                android:hint="@string/phoneNumber"
+                android:inputType="phone"
+                style="@style/edt_style" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txv_showInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/showInfo"
+                android:padding="10dp"
+                android:layout_margin="10dp"/>
+            <TextView
+                android:id="@+id/txv_nameS"
+                android:hint="@string/fullname"
+                android:gravity="center"
+                style="@style/edt_style" />
+            <TextView
+                android:id="@+id/txv_nationalCodeS"
+                android:hint="@string/nationalCode"
+                android:gravity="center"
+                style="@style/edt_style" />
+            <TextView
+                android:id="@+id/txv_phoneS"
+                android:hint="@string/phoneNumber"
+                android:gravity="center"
+                style="@style/edt_style" />
+        </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            android:text="@string/save"/>
+
+
+    </LinearLayout>
+
+
+
+</ScrollView>
