--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imv_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="40dp"
