--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -6,5 +6,6 @@
         android:id="@+id/accountFragment"
         android:title="@string/account_info"
         app:showAsAction="ifRoom"
+        android:visible="false"
         android:icon="@drawable/ic_baseline_monetization_on_24"/>
 </menu>
