--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -91,6 +91,19 @@
             android:background="@color/black"
             android:alpha="0.2"
             android:layout_marginHorizontal="10dp"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_change_account_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            android:text="@string/change_account_info"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/black"
+            android:alpha="0.2"
+            android:layout_marginHorizontal="10dp"/>
 
         <LinearLayout
             android:id="@+id/ll_edt"
