--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/accountFragment"
+        android:id="@+id/accountFragmentA"
         android:title="@string/account_info"
         app:showAsAction="ifRoom"
         android:visible="false"
