--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
+        <TextView
+            android:id="@+id/txv_good_talk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/design_default_color_primary"/>
+
 
 
 
@@ -26,7 +36,7 @@
         app:layout_constraintEnd_toStartOf="@+id/include_Img2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/txv_good_talk" />
 
     <include
         android:id="@+id/include_Img2"
@@ -39,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/include_Img1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/txv_good_talk" />
 
     <include
         android:id="@+id/include_Img3"
