set text good talk

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="pink_3">#dc799c</color>
     <color name="pink_4">#eba2ab</color>
     <color name="pink_5">#efbaba</color>
+    <color name="bg">#166200EE</color>
 </resources>
