--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="pink">#ED23E2</color>
     <color name="blue">#2179BF</color>
     <color name="gray">#666666</color>
+    <color name="gray2">#bbbbbb</color>
 
     <color name="_purple_200">#DF7980A8</color>
     <color name="_purple_500">#423951</color>
