--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,14 +15,14 @@
     </style>
 
 
-    <style name="Theme.Pink" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Pink" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/pink_2</item>
-        <item name="colorPrimaryVariant">@color/pink_3</item>
-        <item name="colorOnPrimary">@color/pink_1</item>
+        <item name="colorPrimary">#e7b7cc</item>
+        <item name="colorPrimaryVariant">#dc799c</item>
+        <item name="colorOnPrimary">@color/gray</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pink_4</item>
-        <item name="colorSecondaryVariant">@color/pink_5</item>
+        <item name="colorSecondary">#eba2ab</item>
+        <item name="colorSecondaryVariant">#efbaba</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -31,13 +31,13 @@
 
     <style name="Theme.DrawerProject.dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/_purple_200</item>
+        <item name="colorPrimary">#7980A8</item>
         <item name="colorPrimaryVariant">@color/_purple_500</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">#e7dada</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#0E554E</item>
+        <item name="colorSecondaryVariant">#013A3A</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
